--- a/index.html
+++ b/index.html
@@ -1,56 +1,54 @@
+<!-- index.html -->
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/main.css">
+    
     <title>Branded System</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f4f4f4;
-            color: #333;
-            text-align: center;
-        }
-
-        .container {
-            max-width: 600px;
-            margin: 50px auto;
-            padding: 20px;
-            background-color: #fff;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-
-        h1 {
-            color: #e44d26;
-        }
-
-        p {
-            font-size: 18px;
-            line-height: 1.6;
-            color: #666;
-        }
-
-        img {
-            max-width: 100%;
-            height: 100px;
-        }
-    </style>
 </head>
+
 <body>
-    <div class="container">
-        <img src="/Branded System/Images/construction.png" alt="Under Construction">
-        <h1>Website Under Construction</h1>
-        <p>We're working on something awesome. Please check back soon!</p>
+    <header>
+        <div class="logo">
+            <img src="your-logo.png" alt="Your Logo">
+
+        </div>
+        <nav>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Service</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+    <div class="main-contain">
+
+
     </div>
 
-    <div class="info">
-        <div class="contact-info">
-            <p><b>Contact us:</b></p>
-            <p>Email: <a href="mailto:info@brandedsystem.com">info@brandedsystem.com</a></p>
-            <p>Phone: +91 9321123729</p>
+
+    <footer>
+        <div class="footer-container">
+            <div class="social-media">
+                <a href="#" target="_blank"><img src="facebook-icon.png" alt="Facebook"></a>
+                <a href="#" target="_blank"><img src="twitter-icon.png" alt="Twitter"></a>
+                <a href="#" target="_blank"><img src="instagram-icon.png" alt="Instagram"></a>
+            </div>
+            <div class="contact-details">
+                <p>Contact us: info@example.com</p>
+                <p>Phone: +1 (123) 456-7890</p>
+            </div>
+            <div class="address">
+                <p>Your Company Name</p>
+                <p>123 Main Street, Cityville, Country</p>
+            </div>
         </div>
-    </div>
+    </footer>
+
 </body>
+
 </html>
